--- a/Main.html
+++ b/Main.html
@@ -5,5 +5,9 @@
         <title>City Skyline</title>
         <link rel="stylesheet" href="./styles.css">
     </head>
-    <body></body>
+    <body>
+        <div class="background-buildings">
+
+        </div>
+    </body>
 </html>
